[package]
name = "wasmcloud-test-util"
version = "0.5.1"
edition = "2021"
authors = [ "wasmcloud Team" ]
license = "Apache-2.0"
description = "Test tools and utilities for wasmcloud"
homepage = "https://github.com/wasmcloud/wasmcloud"
repository = "https://github.com/wasmcloud/wasmcloud-test"
readme = "README.md"

[dependencies]
wasmcloud-interface-testing = { git = "https://github.com/wasmcloud/interfaces", rev = "c5e09cac09e04c9ca4fb0d78d19bde5f093c8133" }
wasmbus-rpc = { git = "https://github.com/wasmcloud/weld", rev="77f50ddd476e0b2a50915de6c4fb0f41e6e24c85" }
regex = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow = "1.0"
async-trait = "0.1"
async-nats = "0.22.0"
futures = "0.3"
base64 = "0.13"
log = "0.4"
serde = { version = "1.0", features=["derive"]}
serde_json = "1.0"
termcolor = "1.1"
tokio = { version = "1", features = ["full"]}
toml = "0.5"
