[package]
name = "wasmcloud-test-util"
version = "0.6.5"
edition = "2021"
authors = [ "wasmcloud Team" ]
license = "Apache-2.0"
description = "Test tools and utilities for wasmcloud"
homepage = "https://github.com/wasmcloud/wasmcloud"
repository = "https://github.com/wasmcloud/wasmcloud-test"
readme = "README.md"

[dependencies]
smithy-bindgen = { git="https://github.com/wasmcloud/weld", branch="feat/smithy-bindgen" }
wasmbus-rpc = { git="https://github.com/wasmcloud/weld", rev="4faec462d1dd41efbfe95c9e2d2061a9a40f2fcc", features = [ "otel" ] }
serde_bytes = "0.11"
regex = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow = "1.0"
async-trait = "0.1"
async-nats = "0.23.0"
futures = "0.3"
base64 = "0.13"
log = "0.4"
nkeys = "0.2.0"
serde = { version = "1.0", features=["derive"]}
serde_json = "1.0"
termcolor = "1.1"
tokio = { version = "1", features = ["full"]}
toml = "0.5"
